--- a/authentications/templates/otp_email_template.html
+++ b/authentications/templates/otp_email_template.html
@@ -33,7 +33,7 @@
                     font-size: 24px;
                     font-weight: 600;
                   ">
-                  Mik Mix
+                  Inteligent AI Agent - One-Time Password (OTP)
                 </h1>
               </td>
             </tr>
